client/src/market/components/ListView/index.module.css
.mcListings {
    margin-top: 16px;
    margin-left: auto;
    margin-right: auto;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    column-gap: 16px;
    row-gap: 16px;
}

@media screen and (max-width: 960px) {
    .mcListings {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

@media screen and (max-width: 480px) {
    .mcListings {
        grid-template-columns: 1fr 1fr;
    }
}

